--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,52 +22,54 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_main"
-        android:layout_width="334dp"
-        android:layout_height="372dp"
+        android:layout_width="353dp"
+        android:layout_height="421dp"
         android:layout_marginStart="28dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="27dp"
         android:layout_marginBottom="170dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.625"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/addAlbumButton"
         android:layout_width="155dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="11dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="2dp"
         android:text="Add"
         app:layout_constraintBottom_toTopOf="@+id/openAlbumButton"
         app:layout_constraintEnd_toStartOf="@+id/removeAlbumButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recycler_main" />
+        app:layout_constraintTop_toBottomOf="@id/SearchButton" />
 
     <Button
         android:id="@+id/removeAlbumButton"
-        android:layout_width="155dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="11dp"
+        android:layout_width="154dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginBottom="2dp"
         android:text="Remove"
         app:layout_constraintBottom_toTopOf="@+id/renameAlbumButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/addAlbumButton"
-        app:layout_constraintTop_toBottomOf="@+id/recycler_main" />
+        app:layout_constraintTop_toBottomOf="@id/SearchButton" />
 
     <Button
         android:id="@+id/openAlbumButton"
         android:layout_width="155dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="11dp"
-        android:layout_marginEnd="16dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:text="Open"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -78,15 +80,28 @@
     <Button
         android:id="@+id/renameAlbumButton"
         android:layout_width="155dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="11dp"
-        android:layout_marginEnd="24dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="27dp"
         android:layout_marginBottom="16dp"
         android:text="Rename"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/openAlbumButton"
         app:layout_constraintTop_toBottomOf="@+id/removeAlbumButton" />
+
+    <Button
+        android:id="@+id/SearchButton"
+        android:layout_width="341dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="27dp"
+        android:text="Search"
+        app:layout_constraintBottom_toTopOf="@+id/addAlbumButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recycler_main" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
